# visualization.goom

./: .clang-format  .clang-format-exclude-dirs  .clang-tidy  .gitignore  .travis.yml  AddonVersion.cmake  CMakeLists.txt  Makefile.am  README.md  appveyor.yml  azure-pipelines.yml  bootstrap  configure.in  goom-build-with-docker-toolchain.sh  goom-build.bat  goom-build.sh  goom-configure-with-docker-toolchain.sh  goom-configure.bat  goom-configure.sh  goom-docker-build-run.sh  goom-docker-build.sh  goom-docker-install-to.sh  goom-docker-paths.sh  goom-docker-remote-build.sh  goom-docker-remote-copy.sh  goom-docker-run.sh  goom-get-vars.sh  goom-install.sh  goom-spell-french.dic  goom-spell.dic  goom-unit-tests-with-docker-toolchain.sh  goom-unit-tests.sh
addon/: addon.xml
depends/goom-libs/: CMakeLists.txt
depends/goom-libs/lib/fmt/include/: format
depends/goom-libs/lib/libdivide/: libdivide.h
depends/goom-libs/src/: CMakeLists.txt
depends/goom-libs/src/bezier/include/bezier/: bezier.h
depends/goom-libs/src/filter-plots/: after_effects.py  all_effects.py  effects_cplot.py  effects_image.py  filter_effects.py  remap_tests.py  select_effects.py
depends/goom-libs/src/goom/: AUTHORS  CMakeLists.txt  ChangeLog  README
depends/goom-libs/src/goom/include/goom/: compiler_versions.h  goom_config.h  goom_control.h  goom_graphic.h  goom_types.h  goom_version.h  logging.h  sound_info.h  spimpl.h
depends/goom-libs/src/goom/src/: goom_control.cpp  goom_graphic.cpp  goom_plugin_info.h  goom_version.cpp  point2d.h  sound_info.cpp
depends/goom-libs/src/plotting/: main.py  pyvenv.cfg  rm-too-small.sh
depends/goom-libs/src/tests/: CMakeLists.txt
depends/goom-libs/src/tests/src/: test_main.cpp  test_pixels.cpp
depends/goom-libs/src/vivid/: CMakeLists.txt
depends/goom-libs/src/vivid/src/: colormap.cpp  hsv.cpp  index.cpp  lab.cpp  lch.cpp  utility.cpp
depends/goom-libs/src/vivid/tests/: CMakeLists.txt  utility.h
lib/goom/: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  configure.in
lib/goom/include/goom/: convolve_fx.h  draw_methods.h  filter_data.h  filters.h  flying_stars_fx.h  goom_config.h  goom_control.h  goom_dots_fx.h  goom_draw.h  goom_graphic.h  goom_plugin_info.h  goom_stats.h  goom_version.h  goom_visual_fx.h  ifs_dancers_fx.h  image_fx.h  lines_fx.h  sound_info.h  tentacles_fx.h  tube_fx.h  v2d.h
lib/goom/sdl-goom/: Makefile.am  sdl_goom.c
lib/goom/src/: convolve_fx.cpp  draw_methods.cpp  filters.c.rej  filters.cpp  flying_stars_fx.cpp  goom_control.cpp  goom_dots_fx.cpp  goom_draw.cpp  goom_graphic.cpp  goom_plugin_info.h  goom_stats.cpp  goom_visual_fx.cpp  goomsl_lex.c  goomsl_yacc.h  ifs_dancers_fx.cpp  image_fx.cpp  lines.c  lines.h  lines_fx.cpp  motif_blank.h  sound_info.cpp  sound_tester.c  tentacle3d.c  tentacles_fx.cpp  tube_fx.cpp
lib/goom/src/control/: goom_events.cpp  goom_events.h  goom_image_buffers.cpp  goom_image_buffers.h  goom_lock.h  goom_states.cpp  goom_states.h  goom_title_display.cpp  goom_title_display.h
lib/goom/src/draw/: goom_draw_buffer.cpp  goom_draw_buffer.h  text_draw.cpp  text_draw.h
lib/goom/src/filters/: filter_buffers.cpp  filter_buffers.h  filter_control.cpp  filter_control.h  filter_normalized_coords.cpp  filter_normalized_coords.h  filter_zoom_vector.cpp  filter_zoom_vector.h  filter_zoom_vector_effects.cpp  filter_zoom_vector_effects.h  goom_zoom_vector.h  image_displacement.cpp  image_displacement.h
lib/goom/src/ifs/: colorizer.cpp  colorizer.h  fractal.cpp  fractal.h  ifs_types.h  low_density_blurrer.cpp  low_density_blurrer.h
lib/goom/src/stats/: filter_stats.cpp  filter_stats.h  goom_control_stats.cpp  goom_control_stats.h  ifs_stats.cpp  ifs_stats.h  line_stats.cpp  line_stats.h  sound_stats.cpp  sound_stats.h  stars_stats.cpp  stars_stats.h  tentacles_stats.cpp  tentacles_stats.h  tube_stats.cpp  tube_stats.h
lib/goom/src/tentacles/: tentacle_driver.cpp  tentacle_driver.h  tentacles.cpp  tentacles.h
lib/goom/src/tubes/: tubes.cpp  tubes.h
lib/goom/xmms-goom/: Makefile.am  xmms_goom.c
lib/goomtests/: CMakeLists.txt
lib/goomtests/src/: test_colorutils.cpp  test_goomrand.cpp  test_main.cpp  test_mathutils.cpp  test_parallel_utils.cpp  test_strutils.cpp
lib/goomutils/: CMakeLists.txt
lib/goomutils/include/goomutils/: colormaps.h  colorutils.h  enumutils.h  goomrand.h  logging.h  logging_control.h  mathutils.h  parallel_utils.h  random_colormaps.h  random_colormaps_manager.h  splitmix.hpp  strutils.h  t_values.h  thread_pool.h  timer.h  xoshiro.hpp
lib/goomutils/include/goomutils/color_data/: Accent.h  Accent_3.h  Accent_4.h  Accent_5.h  Accent_6.h  Accent_7.h  Acton_10.h  Acton_11.h  Acton_12.h  Acton_13.h  Acton_14.h  Acton_15.h  Acton_16.h  Acton_17.h  Acton_18.h  Acton_19.h  Acton_20.h  Acton_3.h  Acton_4.h  Acton_5.h  Acton_6.h  Acton_7.h  Acton_8.h  Acton_9.h  Algae_10.h  Algae_11.h  Algae_12.h  Algae_13.h  Algae_14.h  Algae_15.h  Algae_16.h  Algae_17.h  Algae_18.h  Algae_19.h  Algae_20.h  Algae_3.h  Algae_4.h  Algae_5.h  Algae_6.h  Algae_7.h  (+1650 more)
lib/goomutils/include/goomutils/graphics/: honeycomb.h  image_bitmaps.h  small_image_bitmaps.h  turtle.h
lib/goomutils/src/: color_data_maps.cpp  colormaps.cpp  colorutils.cpp  create_colormaps.py  extra_color_groups.cpp  get_palettable_cmaps.py  goomrand.cpp  logging.cpp  mathutils.cpp  random_colormaps.cpp  random_colormaps_manager.cpp  stb_image.h  strutils.cpp  t_values.cpp  thread_pool.cpp
lib/goomutils/src/graphics/: honeycomb.cpp  image_bitmaps.cpp  small_image_bitmaps.cpp  turtle.cpp
lib/vivid/: CMakeLists.txt
lib/vivid/examples/cmake/: CMakeLists.txt  main.cpp
lib/vivid/include/vivid/: conversion.h  encoding.h  profiles.h
lib/vivid/include/vivid/data/: blue-yellow.h  cool-warm.h  hsl-pastel.h  hsl.h  inferno.h  magma.h  plasma.h  rainbow.h  turbo.h  viridis.h  vivid.h  xterm.h
lib/vivid/src/: adobe.cpp  color.cpp  colormap.cpp  hex.cpp  hsl.cpp  hsv.cpp  index.cpp  lab.cpp  lch.cpp  lrgb.cpp  name.cpp  rgb.cpp  rgb32.cpp  rgb8.cpp  srgb.cpp  utility.cpp  xyz.cpp
lib/vivid/tests/: CMakeLists.txt  utility.h
(+2136 files in other folders)
